Fine-tuning for Fall 2022.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -10,7 +10,7 @@ and
 % computational biologists, and
 (2) integrating computational research into biology
 curricula\footnote{\label{Wright19}\shortfullcite{Wright2019}\hspace{-0.8em}},
-especially for historically excluded groups.
+especially for students from historically excluded groups.
 % \textbf{\textit{What processes are responsible for the generation and
 %         distribution of biodiversity?}}
 % Elucidating answers to this question, in its broadest sense, is the primary
@@ -77,7 +77,7 @@ However,
 it is limited in two ways.
 First,
 by focusing on pairs of populations, it ignores the possibility of patterns of
-shared divergences across the ancestral history shared among the populations.
+co-divergences across the ancestral history shared among the populations.
 To overcome this limitation, my research group is currently working on fully
 phylogenetic approaches to testing for temporally clustered divergences.
 Second, it assumes the natural history of organisms does not affect how they
@@ -241,16 +241,18 @@ our approach did at inferring the evolutionary histories they created.
 
 The evolutionary scenarios the students design using
 a forward-time, population-genetics simulator
-like \slim will be very far removed from the assumptions
+% like \slim
+will be far removed from the assumptions
 of the macroevolutionary BDB model.
 As a result, the data generated under the students' models will be a good proxy
 for real, biological data.
 If the BDB model performs well on these data, we, and other scientists, can be
 more confident in the inferences it makes from real data.
 This level of ``stress-testing'' methods is rarely done in biology, and will
-provide a very important assessment of our new methods' behavior.
-Inclusion in cutting-edge research in computational biology will not only help
-teach our students about evolutionary biology, but also the process of science.
+provide an important assessment of our new methods' behavior.
+Including out students in
+cutting-edge research in computational biology will not only help
+teach them about evolutionary biology, but also the process of science.
 All of our students will be co-authors on the papers that present the results
 of these simulation-based analyses.
 I am currently seeking funding for this work as part of my pending NSF CAREER
