Removing superfluous comma.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -40,7 +40,7 @@ An ideal system for addressing this question is the dynamic landscape of
 Southeast Asia, where many groups of islands coalesced during lower sea levels
 of glacial periods and were fragmented during interglacial rises in sea level.
 It has often been assumed that this repeated fragmentation functioned as a
-``species pump,'' driving vicariant speciation across these islands.
+``species pump'' driving vicariant speciation across these islands.
 If correct, this predicts that population divergences across islands fragmented
 by rising sea levels were temporally clustered around interglacial sea
 incursions.
