Section header formatting tweaks.

--- a/research-statement-jro.tex
+++ b/research-statement-jro.tex
@@ -102,6 +102,18 @@
     {\sffamily\bfseries}
     {\S\ \thesection.}{.5em}{}[---]
 \titlespacing{\subsubsection}
+    {0ex}{0ex}{0ex}
+
+\titleformat{\paragraph}[runin]
+    {\sffamily\normalsize\slshape\bfseries}
+    {}{}{}[---]
+\titlespacing{\paragraph}
+    {\parindent}{0ex}{0ex}
+
+\titleformat{\subparagraph}[runin]
+    {\normalsize\slshape}
+    {}{}{}[---]
+\titlespacing{\subparagraph}
     {\parindent}{0ex}{0ex}
 
 %% Format list environments %%%%%%%%%%%%%%%%%%%%%%%%
